* Handle datetime_field in Many2One
* Set readonly on records with _datetime in the context
* Display values of reference fields even if there is no model
* Allow to directly print or create email with reports
* Handle invisible states on list view
* Add user warnings
* Add Model in logs
* Allow to duplicate many records at once
* Improve netrpc communication speed
* Improve date widget to display mask only when having focus
* Fix for host with IPv6 enable but without default IPv6 route
* Add desktop entry
* Add win32 single executable
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release