@@ -1,3 +1,4 @@
+* Update client labels at language change
 * Handle datetime_field in Many2One
 * Set readonly on records with _datetime in the context
 * Display values of reference fields even if there is no model
